--- a/AdventOfCode_2021.Rmd
+++ b/AdventOfCode_2021.Rmd
@@ -453,3 +453,89 @@ for (i in 1:nrow(diags)) {
 sum(vents > 1)
 ```
 
+# Day 6: Lanternfish
+Assume lantern fish produce one new lanternfish every `7` days.
+
+Model each day as *number of days until it creates a new lanternfish*, but new lanternfish need an additional 2 days to reproduce.
+
+For instance, take a lanternfish with internal value `3`
+For each subsequent day:
+1. internal timer decrease to 2
+2. internal timer decrease to 1
+3. internal timer decrease to 0
+4. internal timer reset to 6, and create new lanternfish with internal timer of 8
+5. internal timer of 5, and offspring has internal timer of 7
+
+How many lanternfish after 80 days?
+```{r}
+require(tidyverse)
+d <- read_csv('data/aoc-6.txt', col_names=FALSE,
+              col_types = cols(.default=col_integer()))
+d_vals <- as.matrix(d)
+d <- tibble(value = t(d_vals))
+d %>% head()
+```
+
+```{r}
+add_day <- function(d) {
+  d2 <- d %>%
+    mutate(need_new = case_when(
+      value == 0 ~ 1,
+      TRUE ~ 0
+    )) %>%
+    mutate(
+      next_day = case_when(
+        value == 0 ~ 6,
+        TRUE ~ value - 1
+      ))
+  n_new <- sum(d2$need_new)
+  new_v <- tibble(value = rep(8, n_new))
+  new_d <- tibble(value = d2$next_day)
+  new_d <- new_d %>% bind_rows(new_v)
+  return(new_d)
+}
+
+d_orig <- d
+n_pop <- vector(mode='numeric', length=80)
+for (i in 1:80) {
+  d <- add_day(d)
+  n_pop[i] <- nrow(d)
+}
+
+nrow(d)
+```
+
+## Part 2: What about 256 days?
+256 days is a lot of replications to run. Instead of storing the entire data frame each time, it's faster and more efficient to just count the number of fish at each stage.
+
+```{r}
+d <- d_orig
+d %>% count(value)
+```
+
+At the start, there are only 5 distinct values. But we will want to track the numbers of fish from values `0` all the way up to values of `8`
+```{r}
+counter_init <- c(0,117,43,41,49,50,0,0,0)
+sum(counter_init)
+```
+
+```{r}
+add_day2 <- function(counter) {
+  new_6 <- counter[1] # any new numbers to
+  for (i in 1:9) {
+    counter[i] <- counter[i+1]
+  }
+  counter[7] <- counter[7] + new_6
+  counter[9] <- new_6
+  return(counter)
+}
+```
+
+```{r}
+c <- counter_init
+for (i in 1:256) {
+  c <- add_day2(c)
+}
+sum(c)
+```
+
