--- a/AdventOfCode_2021.Rmd
+++ b/AdventOfCode_2021.Rmd
@@ -892,21 +892,60 @@ for (i in 1:length(low_idxs)) {
 }
 ```
 
-Now that we have a list of low-point locations in the array, we can use those for starting points to build up basins.
-```{r}
-# keep track of indices for each basin
-basins <- vector(mode='list', length=length(low_points))
+Here's the approach I'm going to take.
+1. Take a matrix of 'valleys' (all 9s replaced with 0)
+2. Start with the upper left (r=1, c=1) and move left-to-right, top-to-bottom, checking for clusters
+3. Checking for clusters means
+3.a. If current position is non-zero, set it to -1
+3.b. Recursively check neighbors up, down, left, and right
+3.c. When no neighbors are left, count the number of -1 and store
+4. Reset at -1 to 0
 
-#for (li in 1:length(low_idxs)) {
-#  nodes <- 1
-#  
-#}
+```{r}
+# recursively check nodes, settings 0 to -1 on a hit
+check_node <- function(r, c, mat) {
+  rmax <- nrow(mat)
+  cmax <- ncol(mat)
+  
+  if (mat[r,c] == 0 || mat[r,c] == -1) return(mat)
+  # mat[r,c] was not 0 or previously set
+  mat[r,c] <- -1
+  
+  # check the neighbors
+  if (r > 2) mat <- check_node(r-1, c, mat)
+  if (c > 2) mat <- check_node(r, c-1, mat)
+  if (r < rmax) mat <- check_node(r+1, c, mat)
+  if (c < cmax) mat <- check_node(r, c+1, mat)
+  
+  return(mat)
+}
 ```
 
-Wait, we don't actually care where the lowpoints are, we just want to find basins
+```{r}
+# get matrix with 1 for < 9 and 0 for 9
+# AKA 0 for edges/boundaries
+valleys <- ifelse(dm < 9, 1, 0)
+
+# prepare numerical vector to hold basin sizes
+basins <- vector(mode='numeric', length=length(low_idx))
+
+basin_id <- 1
+searched <- valleys
+for (r in 1:nrow(valleys)) {
+  for (c in 1:ncol(valleys)) {
+    # don't waste time checking empty spots
+    if (searched[r,c] != 0 && searched[r,c] != -1) {
+      searched <- check_node(r,c,searched)
+      basins[basin_id] <- sum(searched == -1)
+      searched[searched==-1] <- 0
+      basin_id <- basin_id + 1
+    }
+  }
+}
+```
 
 ```{r}
-ridges <- ifelse(dm > 8, 1, 0)
-valleys <- ifelse(dm < 9, 1, 0)
+big3 <- sort(basins)[(length(basins)-2) : length(basins)]
+big3[1] * big3[2] * big3[3]
 ```
 
